--- a/jupyter_remote_desktop_proxy/share/web/noVNC/vnc_lite.html
+++ b/jupyter_remote_desktop_proxy/share/web/noVNC/vnc_lite.html
@@ -3,6 +3,8 @@
 <head>
 
     <!--
+    Modified from novnc_lite.html example in noVNC 1.4.0
+
     noVNC example: lightweight example using minimal UI and features
 
     This is a self-contained file which doesn't import WebUtil or external CSS.
@@ -51,6 +53,36 @@
         #screen {
             flex: 1; /* fill remaining space */
             overflow: hidden;
+        }
+
+        /* Clipboard */
+        #noVNC_clipboard_area {
+            position: fixed;
+            top: 0px;
+            left: 0px;
+        }
+        #noVNC_clipboard_button {
+            border: 1px outset;
+            cursor: pointer;
+        }
+        #noVNC_clipboard_button img {
+            height: 24px;
+            vertical-align: middle;
+        }
+        #noVNC_clipboard_button .label {
+            padding: 5px 5px 4px 0px;
+        }
+        #noVNC_clipboard {
+        /* Full screen, minus padding and left and right margins */
+            max-width: calc(100vw - 2*15px - 75px - 25px);
+            background-color: #6e84a3;
+        }
+        .noVNC_clipboard_closed #noVNC_clipboard {
+            display: none;
+        }
+        #noVNC_clipboard_text {
+            width: 500px;
+            max-width: 100%;
         }
 
     </style>
@@ -107,13 +139,20 @@
         // query string. If the variable isn't defined in the URL
         // it returns the default value instead.
         function readQueryVariable(name, defaultValue) {
-            // A URL with a query parameter can look like this:
+            // A URL with a query parameter can look like this (But will most probably get logged on the http server):
             // https://www.example.com?myqueryparam=myvalue
+            //
+            // For privacy (Using a hastag #, the parameters will not be sent to the server)
+            // the url can be requested in the following way:
+            // https://www.example.com#myqueryparam=myvalue&password=secreatvalue
+            //
+            // Even Mixing public and non public parameters will work:
+            // https://www.example.com?nonsecretparam=example.com#password=secreatvalue
             //
             // Note that we use location.href instead of location.search
             // because Firefox < 53 has a bug w.r.t location.search
             const re = new RegExp('.*[?&]' + name + '=([^&#]*)'),
-                  match = document.location.href.match(re);
+                  match = ''.concat(document.location.href, window.location.hash).match(re);
 
             if (match) {
                 // We have to decode the URL since want the cleartext value
@@ -131,7 +170,7 @@
         const host = readQueryVariable('host', window.location.hostname);
         let port = readQueryVariable('port', window.location.port);
         const password = readQueryVariable('password');
-        const path = readQueryVariable('path', 'websockify');
+        const path = readQueryVariable('path', window.location.pathname.replace(/[^/]*$/, '').substring(1) + 'websockify');
 
         // | | |         | | |
         // | | | Connect | | |
@@ -164,13 +203,41 @@
 
         // Set parameters that can be changed on an active connection
         rfb.viewOnly = readQueryVariable('view_only', false);
-        rfb.scaleViewport = readQueryVariable('scale', false);
+        rfb.scaleViewport = readQueryVariable('scale', true);
+
+        // Clipboard
+        function toggleClipboardPanel() {
+            document.getElementById('noVNC_clipboard_area').classList.toggle('noVNC_clipboard_closed');
+        }
+        document.getElementById("noVNC_clipboard_button")
+            .addEventListener('click', toggleClipboardPanel);
+
+        function clipboardReceive(e) {
+            document.getElementById('noVNC_clipboard_text').value = e.detail.text;
+        }
+        rfb.addEventListener("clipboard", clipboardReceive);
+
+        function clipboardSend() {
+            const text = document.getElementById('noVNC_clipboard_text').value;
+            rfb.clipboardPasteFrom(text);
+        }
+        document.getElementById("noVNC_clipboard_text")
+            .addEventListener('change', clipboardSend);
     </script>
 </head>
 
 <body>
     <div id="top_bar">
         <div id="status">Loading</div>
+        <!-- Clipboard -->
+        <div id="noVNC_clipboard_area" class="noVNC_clipboard_closed">
+            <div id="noVNC_clipboard_button"><img src="app/images/clipboard.svg" />
+                <span class="label">Clipboard</span>
+            </div>
+            <div id="noVNC_clipboard">
+                <textarea id="noVNC_clipboard_text" rows=5></textarea>
+            </div>
+        </div>
         <div id="sendCtrlAltDelButton">Send CtrlAltDel</div>
     </div>
     <div id="screen">
